# cattrs-rename

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/cattrs_rename/: __init__.py  _cols.py  _gen.py
tests/: test_rename.py
