[project]
name = "cattrs-rename"
version = "0.1.0"
description = "A shorthand syntax for cattrs rename overrides."
readme = "README.md"
authors = [
    { name = "MtkN1", email = "51289448+MtkN1@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = []
license = "MIT"
license-files = ["LICENSE"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
